src/objects/Call_Summary__c/Call_Summary__c.object-meta.xml
<CustomObject>
    <label>Call Summary</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>