src/objects/Call_Summary__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Call Summaries</relationshipLabel>
    <relationshipName>Call_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>