src/objects/Call_Summary__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Call Summaries</relationshipLabel>
    <relationshipName>Call_Summaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>