src/objects/Call_Summary__c/fields/Sales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agent__c</fullName>
    <formula>CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Agent</label>
    <type>Text</type>
</CustomField>